kubernetes/operators/medik8s/node-healthcheck/app/namespace.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: medik8s-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
    goldilocks.fairwinds.com/enabled: "true"
